Configurado JaCoCo + tests para 100% cobertura (instrucciones, branches, líneas, métodos, clases)